@@ -941,6 +941,11 @@ initpycurl(void)
     insint_c(d, "SSLOPT_NO_REVOKE", CURLSSLOPT_NO_REVOKE);
 # endif
 #endif
+#if LIBCURL_VERSION_NUM >= MAKE_LIBCURL_VERSION(7, 21, 4)
+    insint_c(d, "TLSAUTH_TYPE", CURLOPT_TLSAUTH_TYPE);
+    insint_c(d, "TLSAUTH_USERNAME", CURLOPT_TLSAUTH_USERNAME);
+    insint_c(d, "TLSAUTH_PASSWORD", CURLOPT_TLSAUTH_PASSWORD);
+#endif
 
     insint_m(d, "M_TIMERFUNCTION", CURLMOPT_TIMERFUNCTION);
     insint_m(d, "M_SOCKETFUNCTION", CURLMOPT_SOCKETFUNCTION);
